<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="data"
            type="com.tao.chinachuclient.ui.programdetail.ProgramDetailActivityViewModel.OpenThumbnailDialogData" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <SeekBar
            android:id="@+id/capSeek"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/capPos"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_toStartOf="@+id/capPos"
            android:max="@{data.programLength - 10}"
            android:progress="@{data.selectedSecond}"
            android:visibility="@{data.visibilityPosition}" />

        <EditText
            android:id="@+id/capPos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:ems="4"
            android:hint="@string/noHint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:text="@{String.valueOf(data.selectedSecond)}"
            android:visibility="@{data.visibilityPosition}">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/capResolution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/capPos"
            android:hint="@string/hintResolution"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/text1280x720" />
    </RelativeLayout>
</layout>
